--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <script src="script/jquery-3.6.0.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="script/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <div id="header">
         <div class="header-wrap">
             <div class="header-top">
-                <ul>
+                <ul id="tnb">
                     <li><a href="#">더본코리아</a></li>
                     <li><a href="#">매장찾기</a></li>
                     <li><a href="#">
@@ -106,12 +105,40 @@
         </div>
         <div class="container-wrap3">
             <h1>
-                VARIOUS
+                SWEET
                 <br>
-                BEVERAGE
+                PAIK'S CCINO
+            </h1>
+        </div>
+        <div class="container-wrap4">
+            <h1>
+                TASTY
+                <br>
+                ICE CREAM /
+                <br>
+                DESSERT
+            </h1>
+        </div>
+        <div class="container-wrap5">
+            <h1>
+                STORE
+            </h1>
+        </div>
+        <div class="container-wrap6">
+            <h1>
+                FRANCHISE
             </h1>
         </div>
     </div>
+<div id="SNS">
+    PAIK’S COFFEE SNS
+</div>
+<div id="footer">
+    (주)더본코리아 사업자등록번호 211-86-00870 대표이사 백종원
+주소: 서울시 강남구 봉은사로 1길 39 유성빌딩 5~6층 팩스: 02-511-3864
+본사 대표전화: 02-549-3864 가맹상담전화: 02-3447-0410 고객센터: 1544-2360
+COPYRIGHTⓒ 2018 THEBORN KOREA INC. ALL RIGHTS RESERVED
+</div>
     <script src="script/main.js"></script>
 </body>
 
