--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                 </div>
                 <div class="nav">
-                    <ul>
+                    <ul id="gnb">
                         <li><a href="#">빽다방</a></li>
                         <li><a href="#">메뉴</a></li>
                         <li><a href="#">소식</a></li>
